# TauriBlazor

./: .gitignore  README.md  TauriApi.sln  TauriBlazor.sln
TauriApi/: App.cs  Core.cs  Event.cs  EventValue.cs  Image.cs  ServiceManager.cs  Tauri.cs  TauriApi.csproj  TauriJsInterop.cs  WebviewWindow.cs  Window.cs
TauriApi/Interfaces/: ITauriObject.cs  ITauriPlugin.cs  ITauriWebview.cs  ITauriWebviewWindow.cs  ITauriWindow.cs
TauriApi/Modules/: TauriApp.cs  TauriAppModule.cs  TauriCore.cs  TauriCoreModule.cs  TauriEvent.cs  TauriEventModule.cs  TauriImage.cs  TauriImageModule.cs  TauriPath.cs  TauriPathModule.cs  TauriWebview.cs  TauriWebviewModule.cs  TauriWebviewWindow.cs  TauriWebviewWindowModule.cs  TauriWindow.cs  TauriWindowModule.cs
TauriApi/Modules/Objects/: Core.cs  Dpi.cs  EventValue.cs  Image.cs  Webview.cs  WebviewWindow.cs  Window.cs
TauriApi/Objects/: Dpi.cs  Image.cs  Path.cs  Webview.cs  WebviewWindow.cs  Window.cs
TauriApi/Plugins/: TauriDialog.cs  TauriFs.cs  TauriOpener.cs
TauriApi/Utilities/: ServiceManager.cs  TauriEventHandler.cs  TauriEventManager.cs  TauriEventNameAttribute.cs  TauriJsInterop.cs
TauriApi/tauri-api/: package.json  pnpm-lock.yaml  vite.config.ts
tauri-blazor-demo/: .gitignore
tauri-blazor-demo/src/: Program.cs  TauriBlazorDemo.csproj  _Imports.razor
tauri-blazor-demo/src-blazor/: App.razor  Program.cs  TauriBlazor.csproj  _Imports.razor
tauri-blazor-demo/src-tauri/: Cargo.toml  tauri.conf.json
tauri-blazor-demo/src-tauri/capabilities/: default.json
tauri-blazor-demo/src-tauri/src/: examples.rs  main.rs
(+22 files in other folders)
